Changed site-header width to rem to prevent links from being cut off when font size is increased in browser preferences.

--- a/src/assets/styles/modules/_site-header.css
+++ b/src/assets/styles/modules/_site-header.css
@@ -61,7 +61,7 @@ $header__menu-transition-time: 1000ms;
     position: fixed;
     /*structure*/
     height: 100vh;
-    width: 140px;
+    width: 9rem;
     /*spacing*/
     padding-top: 15px;
     padding-bottom: 0;
